@@ -4,6 +4,7 @@
 - The quality string output in tabular format (qqual field) is clipped to the aligned part of the query.
 - Print '*' as quality string if quality values are not available in tabular output format.
 - Added field 'full_qqual' to print unclipped query quality values to the tabular format.
+- Added field 'full_qseq' to print unclipped query sequence to the tabular format.
 
 [0.9.23]
 - Fixed an issue that could cause too high memory usage.
